force-app/main/default/objects/LigneChiffrage__c/LigneChiffrage__c.object-meta.xml
<CustomObject>
    <label>Ligne de Chiffrage</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Ligne de Chiffrage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de Chiffrage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>