force-app/main/default/objects/LigneChiffrage__c/fields/Chiffrage__c.field-meta.xml
<CustomField>
    <fullName>Chiffrage__c</fullName>
    <label>Chiffrage</label>
    <referenceTo>Chiffrage__c</referenceTo>
    <relationshipLabel>Lignes de Chiffrage</relationshipLabel>
    <relationshipName>Lignes_de_Chiffrage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>