force-app/main/default/objects/LigneChiffrage__c/fields/CodeAction__c.field-meta.xml
<CustomField>
    <fullName>CodeAction__c</fullName>
    <label>Code action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>