force-app/main/default/objects/LigneChiffrage__c/fields/CodeARCAUTO__c.field-meta.xml
<CustomField>
    <fullName>CodeARCAUTO__c</fullName>
    <label>Code ARCAUTO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>