force-app/main/default/objects/LigneChiffrage__c/fields/CodeCote__c.field-meta.xml
<CustomField>
    <fullName>CodeCote__c</fullName>
    <label>Code côté</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>