force-app/main/default/objects/LigneChiffrage__c/fields/CodePiece__c.field-meta.xml
<CustomField>
    <fullName>CodePiece__c</fullName>
    <label>Code Pièce</label>
    <length>50</length>
    <type>Text</type>
</CustomField>