force-app/main/default/objects/LigneChiffrage__c/fields/DommageChiffre__c.field-meta.xml
<CustomField>
    <fullName>DommageChiffre__c</fullName>
    <label>Dommage chiffré</label>
    <length>38</length>
    <type>Text</type>
</CustomField>