force-app/main/default/objects/LigneChiffrage__c/fields/ImputationDommages__c.field-meta.xml
<CustomField>
    <fullName>ImputationDommages__c</fullName>
    <label>Imputation et dommages</label>
    <referenceTo>ImputationDommages__c</referenceTo>
    <relationshipLabel>Lignes de Chiffrage</relationshipLabel>
    <relationshipName>Lignes_de_Chiffrage</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>