force-app/main/default/objects/LigneChiffrage__c/fields/IndicateurApplicationRemisesGlobales__c.field-meta.xml
<CustomField>
    <fullName>IndicateurApplicationRemisesGlobales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur application remises globales</label>
    <type>Checkbox</type>
</CustomField>