force-app/main/default/objects/LigneChiffrage__c/fields/IndicateurPQE__c.field-meta.xml
<CustomField>
    <fullName>IndicateurPQE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur PQE</label>
    <type>Checkbox</type>
</CustomField>