force-app/main/default/objects/LigneChiffrage__c/fields/IndicateurPRE__c.field-meta.xml
<CustomField>
    <fullName>IndicateurPRE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur PRE</label>
    <type>Checkbox</type>
</CustomField>