force-app/main/default/objects/LigneChiffrage__c/fields/IndicateurVE__c.field-meta.xml
<CustomField>
    <fullName>IndicateurVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur VE</label>
    <type>Checkbox</type>
</CustomField>