force-app/main/default/objects/LigneChiffrage__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>Libellé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>