force-app/main/default/objects/LigneChiffrage__c/fields/LibelleLigne__c.field-meta.xml
<CustomField>
    <fullName>LibelleLigne__c</fullName>
    <label>Libellé de ligne</label>
    <length>50</length>
    <type>Text</type>
</CustomField>