force-app/main/default/objects/LigneChiffrage__c/fields/Matiere__c.field-meta.xml
<CustomField>
    <fullName>Matiere__c</fullName>
    <label>Matière</label>
    <length>50</length>
    <type>Text</type>
</CustomField>