force-app/main/default/objects/LigneChiffrage__c/fields/NomFournisseur__c.field-meta.xml
<CustomField>
    <fullName>NomFournisseur__c</fullName>
    <label>Nom fournisseur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>