force-app/main/default/objects/LigneChiffrage__c/fields/NumeroLigne__c.field-meta.xml
<CustomField>
    <fullName>NumeroLigne__c</fullName>
    <label>Numéro de ligne</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>