force-app/main/default/objects/LigneChiffrage__c/fields/OrigineLigne__c.field-meta.xml
<CustomField>
    <fullName>OrigineLigne__c</fullName>
    <label>Origine ligne</label>
    <length>50</length>
    <type>Text</type>
</CustomField>