force-app/main/default/objects/LigneChiffrage__c/fields/OrigineProvenance__c.field-meta.xml
<CustomField>
    <fullName>OrigineProvenance__c</fullName>
    <label>Origine provenance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>