force-app/main/default/objects/LigneChiffrage__c/fields/PrixHT__c.field-meta.xml
<CustomField>
    <fullName>PrixHT__c</fullName>
    <label>Prix HT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>