force-app/main/default/objects/LigneChiffrage__c/fields/QuantitePiece__c.field-meta.xml
<CustomField>
    <fullName>QuantitePiece__c</fullName>
    <label>Quantité pièce</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>