force-app/main/default/objects/LigneChiffrage__c/fields/ReferencePieceConstructeur__c.field-meta.xml
<CustomField>
    <fullName>ReferencePieceConstructeur__c</fullName>
    <label>Référence pièce constructeur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>