force-app/main/default/objects/LigneChiffrage__c/fields/ReferencePieceFournisseur__c.field-meta.xml
<CustomField>
    <fullName>ReferencePieceFournisseur__c</fullName>
    <label>Référence pièce fournisseur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>