force-app/main/default/objects/LigneChiffrage__c/fields/TempsT1__c.field-meta.xml
<CustomField>
    <fullName>TempsT1__c</fullName>
    <label>Temps T1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>