force-app/main/default/objects/LigneChiffrage__c/fields/TempsT2__c.field-meta.xml
<CustomField>
    <fullName>TempsT2__c</fullName>
    <label>Temps T2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>