force-app/main/default/objects/LigneChiffrage__c/fields/TempsT3__c.field-meta.xml
<CustomField>
    <fullName>TempsT3__c</fullName>
    <label>Temps T3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>