force-app/main/default/objects/LigneChiffrage__c/fields/TempsTP__c.field-meta.xml
<CustomField>
    <fullName>TempsTP__c</fullName>
    <label>Temps TP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>