force-app/main/default/objects/LigneChiffrage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodeTVA__c</columns>
    <columns>CodeCote__c</columns>
    <columns>OrigineLigne__c</columns>
    <columns>PrixHT__c</columns>
    <columns>QuantitePiece__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>